[package]
name = "discreet_math_fib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
overflow-checks = true
opt-level = 3
strip = true
debug-assertions = false
lto = true

